--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,62 @@
 # Dependencies
 node_modules/
-venv/
-__pycache__/
+.pnp/
+.pnp.js
+
+# Testing
+coverage/
+
+# Production
+build/
+dist/
+.next/
+out/
+.expo/
+web-build/
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Build outputs
-dist/
-build/
-*.pyc
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+debug.log
 
-# IDE specific files
-.vscode/
+# IDE
 .idea/
+.vscode/
 *.swp
 *.swo
 
-# Operating System
+# OS
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Mobile
+*.apk
+*.aab
+*.ipa
+*.xcarchive
+
+# Temporary files
+*.log
+*.tmp
+*.temp
+
+# Backend
+backend/dist/
+backend/logs/
+
+# Frontend
+frontend/*/dist/
+frontend/*/.cache/
+
+# Misc
+.cache/
+.temp/
+*.pem
